--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
     "react-toastify": "^9.0.1",
     "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.6.4"
